changes in text

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         margin-right: 15px; /* Spacing between text and vis container */
         font-family: "Roboto", sans-serif;
         font-weight: 550;
-        text-align: justify;
+        text-align: left;
       }
 
       .text-container-waffle {
@@ -181,7 +181,7 @@
         /* padding-right: 30px; */
         margin-top: 10px;
         border-radius: 15px;
-        text-align: justify;
+        text-align: left;
 
         font-family: "Roboto", sans-serif;
         font-weight: 550;
@@ -196,7 +196,7 @@
 
         margin-top: 10px;
         border-radius: 15px;
-        text-align: justify;
+        text-align: left;
 
         font-family: "Roboto", sans-serif;
         font-weight: 550;
