slight modication in waffle and text

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       rel="stylesheet"
     />
 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet" />
+
+
     <!-- CSS for styles -->
     <style>
       body {
@@ -166,9 +170,10 @@
         background-color: #e2e3de;
         border-radius: 15px;
         margin-right: 15px; /* Spacing between text and vis container */
-        font-family: "Roboto", sans-serif;
+        font-family: "Source Sans Pro", sans-serif;
         font-weight: 550;
         text-align: left;
+        font-size: large;
       }
 
       .text-container-waffle {
@@ -183,8 +188,9 @@
         border-radius: 15px;
         text-align: left;
 
-        font-family: "Roboto", sans-serif;
+        font-family: "Source Sans Pro", sans-serif;
         font-weight: 550;
+        font-size: large;
       }
 
       .text-container-narrow {
@@ -198,8 +204,9 @@
         border-radius: 15px;
         text-align: left;
 
-        font-family: "Roboto", sans-serif;
+        font-family: "Source Sans Pro", sans-serif;
         font-weight: 550;
+        font-size: large;
       }
 
       .card h2 {
@@ -307,7 +314,7 @@
               A significant <span style="color: #e4b90f;">70%</span> of the world's nations are classified as 
               <span style="color: #e4b90f;">emerging countries</span>, reflecting the <strong>rapid development</strong> happening across various regions. In contrast, 
               <span style="color: #FF4B33;">advanced countries</span> make up <span style="color: #FF4B33;">24%</span>, indicating a smaller but well-established group of economically developed nations. The remaining 
-              <span style="color: #7F8C8D;">6%</span> represents countries with <strong>unstable economies</strong>. These may encompass small island nations, war-torn countries, or those facing significant political and social challenges.
+              <span style="color: #7F8C8D;">6%</span> represents countries with <strong>unstable economies</strong>. These may encompass small island nations, war-torn countries, or those facing significant political challenges.
             </p>            
           </div>
         </div>
@@ -320,9 +327,8 @@
               The <span style="color: #c8845a;">service sector</span> dominated most economies, followed by 
               <span style="color: #e2c15c;">industry</span>, 
               <span style="color: #b77bb1;">manufacturing</span>, and 
-              <span style="color: #4087c9;">agriculture</span>. A noticeable decline across all sectors since 2021 may be linked to global economic shifts, including the COVID-19 pandemic, supply chain disruptions, and inflationary pressures. In the case of <strong>Malaysia</strong>, the <span style="color: #c8845a;">service sector</span> consistently leads as the largest contributor to GDP, followed by 
-              <span style="color: #e2c15c;">industry</span> and 
-              <span style="color: #b77bb1;">manufacturing</span>. The steady growth of the 
+              <span style="color: #4087c9;">agriculture</span>. A noticeable decline across all sectors since 2021 may be linked to global economic shifts such as COVID-19 pandemic. In the case of <strong>Malaysia</strong>, the <span style="color: #c8845a;">service sector</span> consistently leads as the largest contributor to GDP.
+              The steady growth of the 
               <span style="color: #c8845a;">service sector</span> reflects the country's shift toward a more service-oriented economy, encompassing areas such as finance, tourism, and technology.
             </p>            
           </div>
