--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <span style="color: #b77bb1;">manufacturing</span>, and 
               <span style="color: #4087c9;">agriculture</span>. A noticeable decline across all sectors since 2021 may be linked to global economic shifts such as COVID-19 pandemic. In the case of <strong>Malaysia</strong>, the <span style="color: #c8845a;">service sector</span> consistently leads as the largest contributor to GDP.
               The steady growth of the 
-              <span style="color: #c8845a;">service sector</span> reflects the country's shift toward a more service-oriented economy, encompassing areas such as finance, tourism, and technology.
+              <span style="color: #c8845a;">service sector</span> reflects the country's shift toward a more service-oriented economy, encompassing areas such as finance and tourism.
             </p>            
           </div>
         </div>
