--- a/index.html
+++ b/index.html
@@ -358,11 +358,11 @@
     <!-- End page -->
 
     <script type="text/javascript">
-      var specVis1 = "js/choropleth_map.vg.json";
-      var specVis2 = "js/bubbleplot.vg.json";
-      var specVis3 = "js/wafflechart.vg.json";
-      var specVis4 = "js/sankeydiagram.vg.json";
-      var specVis5 = "js/areachart.vg.json";
+      var specVis1 = "https://raw.githubusercontent.com/TanQianQiann/FIT3179_DataVisualisation2/main/js/choropleth_map.vg.json";
+      var specVis2 = "https://raw.githubusercontent.com/TanQianQiann/FIT3179_DataVisualisation2/main/js/bubbleplot.vg.json";
+      var specVis3 = "https://raw.githubusercontent.com/TanQianQiann/FIT3179_DataVisualisation2/main/js/wafflechart.vg.json";
+      var specVis4 = "https://raw.githubusercontent.com/TanQianQiann/FIT3179_DataVisualisation2/main/js/sankeydiagram.vg.json";
+      var specVis5 = "https://raw.githubusercontent.com/TanQianQiann/FIT3179_DataVisualisation2/main/js/areachart.vg.json";
 
       vegaEmbed("#vis1", specVis1, { actions: false })
         .then(function (result) {
